bk_ida/gccida/g1/init_stringpool
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_stringpool/src/stringpool.c:520:26: error: use of undeclared identifier 'alloc_node_0'; did you mean 'alloc_node'?
ident_hash->alloc_node = alloc_node_0; 
                         ^~~~~~~~~~~~
                         alloc_node
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_stringpool/src/stringpool.c:49:17: note: 'alloc_node' declared here
static hashnode alloc_node PARAMS ((hash_table *));
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_stringpool/src/obj/stringpool.o] Error 1
